text contrast fix

--- a/project2.css
+++ b/project2.css
@@ -52,6 +52,7 @@ a {
   width: 857px;
   height: 207px;
   background-image: url(pics/accessibilityoverviewbanner.png);
+  color: black;
 }
 .videospec{
   margin-left: 400px;
@@ -62,4 +63,7 @@ a {
   width:50px; 
   height:50px;
   margin-left: 100px;
+}
+.textcolor{
+  color: black;
 }
